# vaquita

./: .gitignore  Dockerfile  README.md  ZipBrainWeekFP.markdown  publish.sh  repl.hs  vaquita.cabal
.github/workflows/: haskell.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: package.cache  vaquita-0.1.0.0-inplace.conf
src/: Vaquita.hs
src/Vaquita/Telegram/: Bot.hs
test/: tests.hs
