cabal-version: 2.1
name:          vaquita
version:       0.1.0.0
synopsis:      have a whip-round with friends and family
author:        Gastón Tonietti
maintainer:    gaston@tonietti.dev

library
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
      , OverloadedStrings
    exposed-modules:
        Vaquita
      , Vaquita.Telegram.Bot
    build-depends:
        base ^>=4.14.1.0
      , Decimal
      , aeson
      , connection
      , containers
      , http-client-tls
      , req
      , safe-exceptions
      , scotty
      , universum

executable vaquita
    main-is:
        Main.hs
    hs-source-dirs:
        app
    default-language:
        Haskell2010
    build-depends:
        base ^>=4.14.1.0
      , vaquita

test-suite tests
    type:
        exitcode-stdio-1.0
    main-is:
        tests.hs
    hs-source-dirs:
        test
    default-extensions:
        NoImplicitPrelude
      , OverloadedStrings
    build-depends:
        base ^>=4.14.1.0
      , Decimal
      , containers
      , hedgehog
      , universum
      , vaquita
